fix weird issue with spacing in categories title

--- a/less/content.less
+++ b/less/content.less
@@ -88,6 +88,10 @@ blockquote {
     line-height: 25px;
   }
 
+  h2 a + a {
+    margin-left: 8px;
+  }
+
   .headerActions {
     float: right;
 
